# nbvplanner

./: .gitignore  .gitmodules
interface_nbvp_rotors/: CMakeLists.txt
nbvplanner/: CMakeLists.txt  package.xml
nbvplanner/include/nbvplanner/: nbvp.h  nbvp.hpp  rrt.h  tree.h  tree.hpp
nbvplanner/src/: rrt.cpp
nbvplanner/srv/: nbvp_srv.srv
nbvplanner/tests/: original_gain_viz.cpp  predicted_gain_viz.cpp  utils.cpp
nbvplanner/tests/config/: info_gain_viz.rviz
nbvplanner/tests/include/nbvplanner_tests/: utils.h
